# SubDrome

./: .gitignore  README.md  pyproject.toml
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: run-tests.yaml
SubDrome/: AlbumDisplay.qml  AlbumPage.qml  ControlBar.qml  Header.qml  Login.qml  Player.qml  QueueDisplay.qml  QueueItem.qml  SettingsDropdown.qml  Sidebar.qml  SidebarItem.qml  api_handler.py  config_handler.py  login_handler.py  main.py  main.qml  playback_handler.py  resource_rc.py
SubDrome/Album/: AlbumDisplay.qml  AlbumDisplayTopper.qml  AlbumPage.qml  qmldir
SubDrome/Artist/: ArtistDisplay.qml  ArtistDisplayTopper.qml  ArtistPage.qml  qmldir
SubDrome/Bars/: ControlBar.qml  Header.qml  Sidebar.qml  qmldir
SubDrome/Elements/: RatingStars.qml  qmldir
SubDrome/Playlist/: PlaylistPage.qml  qmldir
SubDrome/Queue/: QueueDisplay.qml  qmldir
assets/: resource.qrc
assets/icons/material/: NOTICE.md
tests/unit/: test_config_handler.py
