[project]
name = "SubDrome"
version = "0.1.0"
readme = "README.md"
description = "Subsonic desktop client"
requires-python = ">=3.13"
authors = [
    { name = "Nmstr", email = "publicNamester@gmail.com" }
]
keywords = ["subsonic", "client", "desktop", "music"]
classifiers = [
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: Players",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Intended Audience :: End Users/Desktop",
]
dependencies = [
    "keyring>=25.6.0",
    "pyside6>=6.9.1",
    "pysoundsphere[pygame-backend]>=0.0.8",
    "requests>=2.32.4",
    "validators>=0.35.0",
]
[project.urls]
Source = "https://github.com/Nmstr/SubDrome"
Issues = "https://github.com/Nmstr/SubDrome/issues"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
